--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,14 +1,30 @@
-- name: Convert pipeline scan output to SARIF format
-  id: convert
-  uses: Veracode/veracode-pipeline-scan-results-to-sarif@v0.1.2
-  with:
-    pipeline-results-json: results.json
-    output-results-sarif: veracode-results.sarif
-    source-base-path-1: "^com/veracode:src/main/java/com/veracode"
-    source-base-path-2: "^WEB-INF:src/main/webapp/WEB-INF"
-    finding-rule-level: "3:1:0"
+name: pipeline-scan
+on: push
 
-- name: upload sarif file to repository
-  uses: github/codeql-action/upload-sarif@v1
-  with: # Path to SARIF file relative to the root of the repository
-    sarif_file: veracode-results.sarif
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: build
+        run: maven clean verify
+  pipeline-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
+      # - name: Set up JDK 1.8
+      #   uses: actions/setup-java@v1
+      #   with:
+      #     java-version: 1.8
+      # - name: Download the Pipeline Scanner
+      #   uses: wei/curl@master
+      #   with:
+      #     args: -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+      # - name: Unzip the Pipeline Scanner
+      #   run: unzip pipeline-scan-LATEST.zip
+      # - name: Run Pipeline Scanner
+      #   run: java -Dpipeline.debug=true -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --file "example.jar" --fail_on_severity="Very High, High"
