--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,30 +1,26 @@
-name: pipeline-scan
-on: push
-
+name: Veracode Static Analysis Demo
+on: workflow_dispatch
+    
 jobs:
-  build:
+  static_analysis:
+    name: Static Analysis
     runs-on: ubuntu-latest
+    
     steps:
-      - name: build
-        run: maven clean verify
-  pipeline-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Check out main branch
+        uses: actions/checkout@v2
+          
+      - name: Veracode Upload And Scan
+        uses: veracode/veracode-uploadandscan-action@0.2.1
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
-      # - name: Set up JDK 1.8
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: 1.8
-      # - name: Download the Pipeline Scanner
-      #   uses: wei/curl@master
-      #   with:
-      #     args: -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
-      # - name: Unzip the Pipeline Scanner
-      #   run: unzip pipeline-scan-LATEST.zip
-      # - name: Run Pipeline Scanner
-      #   run: java -Dpipeline.debug=true -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --file "example.jar" --fail_on_severity="Very High, High"
+          appname: 'VeraDemo'
+          createprofile: false
+          filepath: '/prueba.zip'
+          vid: 'fb89935f9488375f52cdf8e8981621c1'
+          vkey: '9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e'
+#          createsandbox: 'true'
+#          sandboxname: 'SANDBOXNAME'
+#          scantimeout: 0
+#          exclude: '*.js'
+#          include: '*.war'
+#          criticality: 'VeryHigh'
