--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -2,17 +2,16 @@ name: Veracode Static Analysis Demo
 on: [push]
 
 jobs:
-  composer-install:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: composer install --ansi --no-progress --no-interaction --prefer-dist
-      - uses: montudor/action-zip@v1
-        with:
-          args: zip -qq -r vendor.zip vendor
-      - uses: actions/upload-artifact@v2
-        with:
-          name: vendor.zip
+    - uses: actions/checkout@master
+    - name: Archive Release
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'release.zip'
+        exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
 
   static_analysis:
     name: Static Analysis
@@ -27,7 +26,7 @@ jobs:
         with:
           appname: "Demo"
           createprofile: false
-          filepath: "vendor.zip"
+          filepath: "release.zip"
           vid: "fb89935f9488375f52cdf8e8981621c1"
           vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
 #          createsandbox: 'true'
