--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -10,7 +10,7 @@ jobs:
       uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
-        filename: 'release.zip'
+        filename: 'zips/release.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
 
   static_analysis:
