--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -2,22 +2,32 @@ name: Veracode Static Analysis Demo
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: Archive Release
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'zip'
-        filename: 'zips/release.zip'
-        exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@master
+  #   - name: Archive Release
+  #     uses: thedoctor0/zip-release@master
+  #     with:
+  #       type: 'zip'
+  #       filename: 'zips/release.zip'
+  #       exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
 
   static_analysis:
     name: Static Analysis
     runs-on: ubuntu-latest
 
     steps:
+      - run: echo "inicio creacion zip"
+      - uses: actions/checkout@master
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: 'zips/release.zip'
+          exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
+      - run: echo "fin zip"
+      - run: ls
       - name: Check out main branch
         uses: actions/checkout@v2
 
