--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -19,11 +19,13 @@ jobs:
 
     steps:
       - run: echo "inicio creacion zip"
+      - run: mkdir -p ~/new/artifact
       - uses: actions/checkout@master
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
+          directory: '~/new/artifact'
           filename: 'release.zip'
           exclusions: '*.git* /*node_modules/* .editorconfig *.github*'
       - run: echo "fin zip"
