--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -19,34 +19,34 @@ jobs:
         with:
           name: CodePackage
           path: project.zip
-  
+
   pipeline-scan:
     needs: build
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: veracode/pipeline-scan:latest
       options: --user root # our normal luser doesn't have privs to write to github directories
 
     steps:
-    - name: Retrieve artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: CodePackage
-        path: /github/home
-    
-    #  Submit  project to pipeline scan
-    - name: Pipeline Scan
-      run: |
-        cd /github/home
-        java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="fb89935f9488375f52cdf8e8981621c1" --veracode_api_key="9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e" --fail_on_severity="Very High, High" --file="project.zip" --json_output_file="results.json"
-      continue-on-error: true
+      - name: Retrieve artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: CodePackage
+          path: /github/home
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ScanResults
-        path: /github/home/results.json
+      #  Submit  project to pipeline scan
+      - name: Pipeline Scan
+        run: |
+          cd /github/home
+          java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="fb89935f9488375f52cdf8e8981621c1" --veracode_api_key="9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e" --fail_on_severity="Very High, High" --file="project.zip" --json_output_file="results.json"
+        continue-on-error: true
 
-  static_analysis:
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ScanResults
+          path: /github/home/results.json
+
+  static_sandbox_analysis:
     needs: build
     name: Static Analysis
     runs-on: ubuntu-latest
@@ -55,23 +55,36 @@ jobs:
       - name: Check out main branch
         uses: actions/checkout@v2
 
-      - name: Retrieve artifact
-        uses: actions/download-artifact@v2
+      - name: Veracode Upload And Scan
+        uses: veracode/veracode-uploadandscan-action@0.2.1
         with:
-          name: CodePackage
-          path: /github/home
+          appname: "Demo"
+          createprofile: false
+          filepath: "CodePackage"
+          vid: "fb89935f9488375f52cdf8e8981621c1"
+          vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
+          createsandbox: "true"
+          sandboxname: "SANDBOXPRUEBA"
+  #          scantimeout: 0
+  #          exclude: '*.js'
+  #          include: '*.war'
+  #          criticality: 'VeryHigh'
+
+  static_policy_analysis:
+    needs: build
+    name: Static Analysis
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out main branch
+        uses: actions/checkout@v2
 
       - name: Veracode Upload And Scan
         uses: veracode/veracode-uploadandscan-action@0.2.1
         with:
           appname: "Demo"
           createprofile: false
-          filepath: "project.zip"
+          filepath: "CodePackage"
           vid: "fb89935f9488375f52cdf8e8981621c1"
           vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
-#          createsandbox: 'true'
-#          sandboxname: 'SANDBOXNAME'
-#          scantimeout: 0
-#          exclude: '*.js'
-#          include: '*.war'
-#          criticality: 'VeryHigh'
+        
