--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -52,21 +52,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Check out main branch
+        uses: actions/checkout@v2
+      
       - name: Retrieve artifact
         uses: actions/download-artifact@v2
         with:
           name: CodePackage
           path: /github/home
-      
-      - name: Check out main branch
-        uses: actions/checkout@v2
-      
+
       - name: Veracode Upload And Scan
         uses: veracode/veracode-uploadandscan-action@0.2.1
         with:
           appname: "Demo"
           createprofile: false 
-          filepath: "/github/home/CodePackage"
+          filepath: "project.zip"
           vid: "fb89935f9488375f52cdf8e8981621c1"
           vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
           createsandbox: "true"
