--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -62,6 +62,8 @@ jobs:
           path: /github/home
 
       - name: Veracode Upload And Scan
+        run: |
+          cd /github/home
         uses: veracode/veracode-uploadandscan-action@0.2.1
         with:
           appname: "Demo"
