--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -60,6 +60,8 @@ jobs:
         with:
           name: CodePackage
           path: /github/home
+      
+      - name: en ruta
         run: |
           cd /github/home
 
