--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,101 +1,106 @@
-name: Veracode Static Analysis Demo
-on: [push]
+# name: Veracode Analysis 
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
 
-jobs:
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      # zip the project and move it to a staging directory
-      - name: Zip Project
-        run: zip -R project.zip '*.py' '*.html' '*.htm' '*.hbs' '*.css' '*.js' '*.php' 'requirements.txt' '*.json' '*.lock' '*.ts' '*.pl' '*.pm' '*.plx' '*.pl5' '*.cgi' '*.go' '*.sum' '*.mod'
-        env:
-          build-name: project.zip
+# jobs:
+#   build:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       # zip the project and move it to a staging directory
+#       - name: Zip Project
+#         run: zip -R project.zip '*.py' '*.html' '*.htm' '*.hbs' '*.css' '*.js' '*.php' 'requirements.txt' '*.json' '*.lock' '*.ts' '*.pl' '*.pm' '*.plx' '*.pl5' '*.cgi' '*.go' '*.sum' '*.mod'
+#         env:
+#           build-name: project.zip
 
-      - name: Archive package
-        uses: actions/upload-artifact@v2
-        with:
-          name: CodePackage
-          path: project.zip
+#       - name: Archive package
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: CodePackage
+#           path: project.zip
+#   # feature/*
+#   pipeline-scan:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     container:
+#       image: veracode/pipeline-scan:latest
+#       options: --user root # our normal luser doesn't have privs to write to github directories
 
-  pipeline-scan:
-    needs: build
-    runs-on: ubuntu-latest
-    container:
-      image: veracode/pipeline-scan:latest
-      options: --user root # our normal luser doesn't have privs to write to github directories
+#     steps:
+#       - name: Retrieve artifact
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: CodePackage
+#           path: /github/home
 
-    steps:
-      - name: Retrieve artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: CodePackage
-          path: /github/home
+#       #  Submit  project to pipeline scan
+#       - name: Pipeline Scan
+#         run: |
+#           cd /github/home
+#           java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="fb89935f9488375f52cdf8e8981621c1" --veracode_api_key="9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e" --fail_on_severity="Very High, High" --file="project.zip" --json_output_file="results.json"
+#         continue-on-error: true
 
-      #  Submit  project to pipeline scan
-      - name: Pipeline Scan
-        run: |
-          cd /github/home
-          java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="fb89935f9488375f52cdf8e8981621c1" --veracode_api_key="9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e" --fail_on_severity="Very High, High" --file="project.zip" --json_output_file="results.json"
-        continue-on-error: true
+#       - uses: actions/upload-artifact@v2
+#         with:
+#           name: ScanResults
+#           path: /github/home/results.json
+#   # develop
+#   static_sandbox_analysis:
+#     needs: pipeline-scan
+#     name: Static Sandbox Analysis
+#     runs-on: ubuntu-latest
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ScanResults
-          path: /github/home/results.json
+#     steps:
+#       - name: Check out main branch
+#         uses: actions/checkout@v2
 
-  static_sandbox_analysis:
-    needs: pipeline-scan
-    name: Static Sandbox Analysis
-    runs-on: ubuntu-latest
+#       - uses: papeloto/action-zip@v1
+#         with:
+#           files: /
+#           recursive: true
+#           dest: project-archive.zip
 
-    steps:
-      - name: Check out main branch
-        uses: actions/checkout@v2
+#       - name: Veracode Upload And Scan
+#         uses: veracode/veracode-uploadandscan-action@0.2.1
+#         with:
+#           appname: "Demo"
+#           createprofile: false
+#           filepath: "project-archive.zip"
+#           vid: "fb89935f9488375f52cdf8e8981621c1"
+#           vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
+#           createsandbox: "true"
+#           sandboxname: "SANDBOXPRUEBA"
+#   #          scantimeout: 0
+#   #          exclude: '*.js'
+#   #          include: '*.war'
+#   #          criticality: 'VeryHigh'
 
+#   # master main release/*
+#   static_policy_analysis:
+#     needs: static_sandbox_analysis
+#     name: Static Policy Analysis
+#     runs-on: ubuntu-latest
 
-      - uses: papeloto/action-zip@v1
-        with:
-          files: /
-          recursive: true
-          dest: project-archive.zip
+#     steps:
+#       - name: Check out main branch
+#         uses: actions/checkout@v2
 
-      - name: Veracode Upload And Scan
-        uses: veracode/veracode-uploadandscan-action@0.2.1
-        with:
-          appname: "Demo"
-          createprofile: false
-          filepath: "project-archive.zip"
-          vid: "fb89935f9488375f52cdf8e8981621c1"
-          vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
-          createsandbox: "true"
-          sandboxname: "SANDBOXPRUEBA"
-  #          scantimeout: 0
-  #          exclude: '*.js'
-  #          include: '*.war'
-  #          criticality: 'VeryHigh'
+#       - uses: papeloto/action-zip@v1
+#         with:
+#           files: /
+#           recursive: true
+#           dest: project-archive.zip
 
-  static_policy_analysis:
-    needs: static_sandbox_analysis
-    name: Static Policy Analysis
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out main branch
-        uses: actions/checkout@v2
-
-      - uses: papeloto/action-zip@v1
-        with:
-          files: /
-          recursive: true
-          dest: project-archive.zip
-
-      - name: Veracode Upload And Scan
-        uses: veracode/veracode-uploadandscan-action@0.2.1
-        with:
-          appname: "Demo"
-          createprofile: false
-          filepath: "CodePackage"
-          vid: "fb89935f9488375f52cdf8e8981621c1"
-          vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
+#       - name: Veracode Upload And Scan
+#         uses: veracode/veracode-uploadandscan-action@0.2.1
+#         with:
+#           appname: "Demo"
+#           createprofile: false
+#           filepath: "CodePackage"
+#           vid: "fb89935f9488375f52cdf8e8981621c1"
+#           vkey: "9d57b45f85775eecaa3f69502553fb22c718911e3ea645642da7c620d0fc51855b47a933444b513db0be39f0a994f679ea6bd2fe8462088538d34942c2559d5e"
