--- a/.github/workflows/vera-feature.yml
+++ b/.github/workflows/vera-feature.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    # The type of runner that the job will run on
+    # The type of runner that the job will run on -
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
